--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <link rel="icon" href="img/fav-icon.png" type="image/x-icon" />
-        <title>Budget</title>
+        <title></title>
 
         <!-- Icon css link -->
         <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -328,7 +328,7 @@
                 <div class="shap_slider_inner owl-carousel">
                     <div class="item">
                         <h4>“They are the best”</h4>
-                        <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget Creators. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
+                        <p>       . Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
                         <div class="media">
                             <img src="img/team/people/people-5.jpg" alt="">
                             <div class="media-body">
@@ -339,7 +339,7 @@
                     </div>
                     <div class="item">
                         <h4>“They are the best”</h4>
-                        <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget Creators. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
+                        <p>       . Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
                         <div class="media">
                             <img src="img/team/people/people-5.jpg" alt="">
                             <div class="media-body">
@@ -350,7 +350,7 @@
                     </div>
                     <div class="item">
                         <h4>“They are the best”</h4>
-                        <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget Creators. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
+                        <p>       . Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
                         <div class="media">
                             <img src="img/team/people/people-5.jpg" alt="">
                             <div class="media-body">
@@ -453,9 +453,9 @@ Access to health, insurance and social protection</li>
                                 <h6>Say hello</h6>
                                 <h2>Get in touch, send us an e-mail or call us</h2>
                             </div>
-                            <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget Creators</p>
+                            <p>       </p>
                             <a href="#"><h5>Call us now</h5></a>
-                            <a href="#"><h4>+91 98036 78818</h4></a>
+                            <a href="#"><h4></h4></a>
                         </div>
                     </div>
                 </div>
@@ -483,26 +483,12 @@ Access to health, insurance and social protection</li>
                     <div class="row footer_widget_inner">
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_about_widget">
-                                <img src="img/footer-logo.png" alt="">
-                                <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget Creators</p>
+                                <img src="img/logo.png" alt="">
+                                <p></p>
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
-                            <aside class="f_widget f_insta_widget">
-                                <div class="f_title">
-                                    <h3>Instagram</h3>
-                                </div>
-                                <ul>
-                                    <li><a href="#"><img src="img/instagram/ins-1.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-2.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-3.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-4.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-5.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-6.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-7.jpg" alt=""></a></li>
-                                    <li><a href="#"><img src="img/instagram/ins-8.jpg" alt=""></a></li>
-                                </ul>
-                            </aside>
+
                         </div>
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_subs_widget">
