--- a/index.html
+++ b/index.html
@@ -475,16 +475,17 @@ Access to health, insurance and social protection</li>
                 </div>
             </div>
         </section>
-        <!--================End Map Area =================-->
+         ================End Map Area =================-->
         
         <!--================Footer Area =================-->
         <footer class="footr_area">
-           
+            <div class="footer_widget_area">
+            </div>
             <div class="footer_copyright">
                 <div class="container">
                     <div class="float-sm-left">
                         <h5>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script>  <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://budgetwebcreator.web.app" target="_blank">Budget Web Creator</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script>  <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></h5>
                     </div>
                     <div class="float-sm-right">
