--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                             </div>
                         </div>
                     </li>
-                    <li data-index="rs-1588" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="300" data-rotate="0"  data-saveperformance="off"  data-title="Creative" data-param1="01" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-                    <!-- LAYERS -->
+                    <!-- <li data-index="rs-1588" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="300" data-rotate="0"  data-saveperformance="off"  data-title="Creative" data-param1="01" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
+                    LAYERS -->
                         <!-- LAYERS -->
 
                         <!-- LAYER NR. 1 
@@ -273,10 +273,10 @@
                                 <img src="img/home-slider/slider-m-1.png" alt="">
                             </div>
                         </div>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
-        </section>-->
+        </section>
         <!--================End Slider Area =================-->
         
         <!--================Feature Area =================
@@ -475,11 +475,37 @@ Access to health, insurance and social protection</li>
                 </div>
             </div>
         </section>
-         ================End Map Area =================-->
+     ================End Map Area =================-->
         
         <!--================Footer Area =================-->
         <footer class="footr_area">
             <div class="footer_widget_area">
+                <div class="container">
+                    <div class="row footer_widget_inner">
+                        <div class="col-lg-4 col-sm-6">
+                            <aside class="f_widget f_about_widget">
+                                <img src="img/logo.png" alt="">
+                                <p></p>
+                            </aside>
+                        </div>
+                        <div class="col-lg-4 col-sm-6">
+
+                        </div>
+                        <div class="col-lg-4 col-sm-6">
+                            <aside class="f_widget f_subs_widget">
+                                <div class="f_title">
+                                    <h3>Subscribe to newsletter</h3>
+                                </div>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" placeholder="Your e-mail address here" aria-label="Your e-mail address here">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-secondary submit_btn" type="button">Subscribe</button>
+                                    </span>
+                                </div>
+                            </aside>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="footer_copyright">
                 <div class="container">
