--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         <!--================Slider Area =================-->
         <section class="main_slider_area">
             <div id="main_slider" class="rev_slider" data-version="5.3.1.6">
+                <ul>
+                    <li data-index="rs-1587" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="300" data-rotate="0"  data-saveperformance="off"  data-title="Creative" data-param1="01" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
                         <!-- LAYER NR. 1 -->
                         <div class="slider_text_box">
                             <div class="tp-caption tp-resizeme first_text" 
@@ -130,7 +132,7 @@
                                 <img src="img/home-slider/slider-m-1.png" alt="">
                             </div>
                         </div>
-
+                    </li>
                     <!-- <li data-index="rs-1588" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="300" data-rotate="0"  data-saveperformance="off"  data-title="Creative" data-param1="01" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
                     LAYERS -->
                         <!-- LAYERS -->
@@ -272,7 +274,7 @@
                             </div>
                         </div>
                     </li>-->
-
+                </ul>
             </div>
         </section>
         <!--================End Slider Area =================-->
