--- a/about-us.html
+++ b/about-us.html
@@ -241,7 +241,7 @@
         </section>
         <!--================End We Are Company Area =================-->
         
-        <!--================End We Are Company Area =================-->
+        <!--================End We Are Company Area =================
         <section class="talk_area">
             <div class="container">
                 <div class="talk_text">
@@ -250,7 +250,7 @@
                 </div>
             </div>
         </section>
-        <!--================End We Are Company Area =================-->
+       ================End We Are Company Area =================-->
         
         <!--================Footer Area =================-->
         <footer class="footr_area">
