about-us changes

--- a/about-us.html
+++ b/about-us.html
@@ -73,7 +73,6 @@
             <div class="container">
                 <div class="banner_inner_text">
                     <h2>About Us</h2>
-                    <p>Get to know us</p>
                 </div>
             </div>
         </section>
@@ -88,9 +87,9 @@
                             <div class="l_title">
                                 <img src="img/icon/title-icon.png" alt="">
                                 <h6>Discover the features</h6>
-                                <h2>We don’t hide, we stand tall in front of chalenge</h2>
+                                <h2>We crafted tools to assist GIG workers in gaining success.</h2>
                             </div>
-                            <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators </p>
+                            <p>We provide a comprehensive portfolio of services to help people achieve their financial objectives and preserve their assets, as well as the tools they need to advance in their careers.</p>
                             <div class="c_video">
                                 <a class="popup-youtube" href="https://www.youtube.com/watch?v=62QYQE6k7tg"><img src="img/icon/video-icon.png" alt="">See how we work </a>
                             </div>
@@ -112,62 +111,20 @@
                 <div class="testimonials_slider owl-carousel">
                     <div class="item">
                         <div class="testi_item">
-                            <h3>“Simply professionals”</h3>
-                            <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh.</p>
-                            <div class="media">
-                                <div class="d-flex">
-                                    <img class="rounded-circle" src="img/testimonials/testi-1.jpg" alt="">
-                                </div>
-                                <div class="media-body">
-                                    <h4>Davinder Singh</h4>
-                                    <h5>CEO Enterprise</h5>
-                                </div>
-                            </div>
+                            <h3>“Increased Income”</h3>
+                            <p>Through performance insights, planning and opportunities.</p>
                         </div>
                     </div>
                     <div class="item">
                         <div class="testi_item">
-                            <h3>“They are the best”</h3>
-                            <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh.</p>
-                            <div class="media">
-                                <div class="d-flex">
-                                    <img class="rounded-circle" src="img/testimonials/testi-2.jpg" alt="">
-                                </div>
-                                <div class="media-body">
-                                    <h4>Davinder Singh</h4>
-                                    <h5>CEO Enterprise</h5>
-                                </div>
-                            </div>
+                            <h3>“Empowerment”</h3>
+                            <p>Access to privileged perks, as well as identity and financial development.</p>
                         </div>
                     </div>
                     <div class="item">
                         <div class="testi_item">
-                            <h3>“We just love them”</h3>
-                            <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh.</p>
-                            <div class="media">
-                                <div class="d-flex">
-                                    <img class="rounded-circle" src="img/testimonials/testi-3.jpg" alt="">
-                                </div>
-                                <div class="media-body">
-                                    <h4>Davinder Singh</h4>
-                                    <h5>CEO Enterprise</h5>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testi_item">
-                            <h3>“Simply professionals”</h3>
-                            <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh.</p>
-                            <div class="media">
-                                <div class="d-flex">
-                                    <img class="rounded-circle" src="img/testimonials/testi-1.jpg" alt="">
-                                </div>
-                                <div class="media-body">
-                                    <h4>Davinder Singh</h4>
-                                    <h5>CEO Enterprise</h5>
-                                </div>
-                            </div>
+                            <h3>“Social security”</h3>
+                            <p>Access to health care, insurance, and social security.</p>
                         </div>
                     </div>
                 </div>
