--- a/about-us.html
+++ b/about-us.html
@@ -132,7 +132,7 @@
         </section>
         <!--================End Testimonials Slider Area =================-->
         
-        <!--================We Are Company Area =================-->
+        <!--================We Are Company Area =================
         <section class="we_company_area p_100">
             <div class="container">
                 <div class="row company_inner">
@@ -196,7 +196,7 @@
                 </div>
             </div>
         </section>
-        <!--================End We Are Company Area =================-->
+        ================End We Are Company Area =================-->
         
         <!--================End We Are Company Area =================
         <section class="talk_area">
