--- a/about-us.html
+++ b/about-us.html
@@ -113,18 +113,36 @@
                         <div class="testi_item">
                             <h3>“Increased Income”</h3>
                             <p>Through performance insights, planning and opportunities.</p>
+                            <div class="media">
+                                <div class="d-flex">
+                                </div>
+                                <div class="media-body">
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="testi_item">
                             <h3>“Empowerment”</h3>
                             <p>Access to privileged perks, as well as identity and financial development.</p>
+                            <div class="media">
+                                <div class="d-flex">
+                                </div>
+                                <div class="media-body">
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="testi_item">
                             <h3>“Social security”</h3>
                             <p>Access to health care, insurance, and social security.</p>
+                            <div class="media">
+                                <div class="d-flex">
+                                </div>
+                                <div class="media-body">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
