--- a/index.html
+++ b/index.html
@@ -483,6 +483,9 @@ Access to health, insurance and social protection</li>
             <div class="footer_copyright">
                 <div class="container">
                     <div class="float-sm-left">
+                        <a class="" href="index.html">Home</a> | &nbsp;
+                        <a class="" href="about-us.html">About Us</a> | &nbsp;
+                        <a class="" href="service.html">Services</a>
                         <h5>
 Copyright &copy;<script>document.write(new Date().getFullYear());</script>  <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="budgetwebcreator.web.app" target="_blank">Budget web Creator</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></h5>
