--- a/index.html
+++ b/index.html
@@ -486,17 +486,16 @@ Access to health, insurance and social protection</li>
                         <a class="" href="index.html">Home</a> | &nbsp;
                         <a class="" href="about-us.html">About Us</a> | &nbsp;
                         <a class="" href="service.html">Services</a>
+                    </div>
+                    <div class="float-sm-center">
                         <h5>
 Copyright &copy;<script>document.write(new Date().getFullYear());</script>  <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="budgetwebcreator.web.app" target="_blank">Budget web Creator</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></h5>
                     </div>
                     <div class="float-sm-right">
                         <ul>
-                            <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="#"><i class="fa fa-behance"></i></a></li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
