--- a/index.html
+++ b/index.html
@@ -483,8 +483,8 @@ Access to health, insurance and social protection</li>
             <div class="footer_copyright">
                 <div class="container">
                     <div class="float-sm-left">
-                        <a class="" href="index.html">Home</a> | &nbsp;
-                        <a class="" href="about-us.html">About Us</a> | &nbsp;
+                        <a class="" href="index.html">Home</a> &nbsp;| &nbsp;
+                        <a class="" href="about-us.html">About Us</a> &nbsp;| &nbsp;
                         <a class="" href="service.html">Services</a>
                     </div>
                     <div class="float-sm-center">
