--- a/index.html
+++ b/index.html
@@ -487,11 +487,6 @@ Access to health, insurance and social protection</li>
                         <a class="" href="about-us.html">About Us</a> &nbsp;| &nbsp;
                         <a class="" href="service.html">Services</a>
                     </div>
-                    <div class="float-sm-center">
-                        <h5>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script>  <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="budgetwebcreator.web.app" target="_blank">Budget web Creator</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></h5>
-                    </div>
                     <div class="float-sm-right">
                         <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -499,6 +494,16 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>  <i c
                             <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
+                </div>
+                <br/>
+                <div class="container"><div class="float-sm-center">
+                    <h6 style="
+text-align: center;
+font-size: 15px;
+">
+Copyright ©<script>document.write(new Date().getFullYear());</script>2023  <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="budgetwebcreator.web.app" target="_blank">Budget web Creator</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></h6>
+                </div>
                 </div>
             </div>
         </footer>
