--- a/service.html
+++ b/service.html
@@ -265,24 +265,31 @@
         
         <!--================Footer Area =================-->
         <footer class="footr_area">
-
+ 
             <div class="footer_copyright">
                 <div class="container">
                     <div class="float-sm-left">
-                        <h5><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script>   <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></h5>
+                        <a class="" href="index.html">Home</a> &nbsp;| &nbsp;
+                        <a class="" href="about-us.html">About Us</a> &nbsp;| &nbsp;
+                        <a class="" href="service.html">Services</a>
                     </div>
                     <div class="float-sm-right">
                         <ul>
-                            <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="#"><i class="fa fa-behance"></i></a></li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
+                </div>
+                <br/>
+                <div class="container"><div class="float-sm-center">
+                    <h6 style="
+text-align: center;
+font-size: 15px;
+">
+Copyright ©<script>document.write(new Date().getFullYear());</script>2023  <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="budgetwebcreator.web.app" target="_blank">Budget web Creator</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></h6>
+                </div>
                 </div>
             </div>
         </footer>
