--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 data-type="text" 
                                 data-responsive_offset="on" 
                                 data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]">
-                                <a class="more_btn" href="#">Discover</a>
+                                <a class="more_btn" href="#">Apply Now</a>
                             </div>
                             <div class="tp-caption tp-resizeme single_img" 
                             data-x="['right','right','right','right','right','right']" 
@@ -285,7 +285,7 @@
                 <div class="c_title">
                     <img src="img/icon/title-icon.png" alt="">
                     <h6>Discover the features</h6>
-                    <h2>We crafted tools to assist GIG workers in gaining success.</h2>
+                    <h2>We are young but bold</h2>
                 </div>
                 <div class="row feature_inner">
                     <div class="col-lg-4 col-sm-6">
@@ -311,7 +311,7 @@
                             <div class="f_icon">
                                 <img src="img/icon/f-icon-3.png" alt="">
                             </div>
-                            <h4>“Social security</h4>
+                            <h4>Social security</h4>
                             <p>Access to health care, insurance, and social security. </p>
                         </div>
                     </div>
@@ -365,9 +365,9 @@
                         <div class="l_title">
                             <img src="img/icon/title-icon.png" alt="">
                             <h6>Discover the features</h6>
-                            <h2>We don’t hide, we stand tall in front of chalenge</h2>
+                            <h2>We crafted tools to assist GIG workers in gaining success.</h2>
                         </div>
-                        <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget Creators.Budget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget CreatorsBudget Creators a eget nisi. Aenean pellentesque elit vitae eros dignissim ultrices. </p>
+                        <p>We provide a comprehensive portfolio of services to help people achieve their financial objectives and preserve their assets, as well as the tools they need to advance in their careers.</p>
                     </div>
                     <div class="shap_mobile">
                         <img src="img/iphone4.png" alt="">
@@ -378,7 +378,7 @@
         <!--================End The best slider Area =================-->
 
         <!--================End Service Area =================-->
-        <section class="service_feature">
+        <section class="service_feature" style="border-bottom:0px;">
             <div class="container">
                 <div class="row feature_inner">
                     <div class="col-lg-4 col-sm-6">
@@ -447,7 +447,7 @@
         <!--================End Service Area =================-->
         
         <!--================Team People Area =================-->
-        <section class="team_people_area">
+        <section class="team_people_area" style="margin-bottom: 20px;">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-6">
