--- a/index.html
+++ b/index.html
@@ -380,6 +380,11 @@
         <!--================End Service Area =================-->
         <section class="service_feature" style="border-bottom:0px;">
             <div class="container">
+                <div class="c_title">
+                    <img src="img/icon/title-icon.png" alt="">
+                    <h6>Discover the features</h6>
+                    <h2>Services</h2>
+                </div>
                 <div class="row feature_inner">
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
@@ -447,7 +452,7 @@
         <!--================End Service Area =================-->
         
         <!--================Team People Area =================-->
-        <section class="team_people_area" style="margin-bottom: 20px;">
+        <section class="team_people_area" style="margin-bottom: 50px;">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-6">
