Logo and Footer changes

--- a/about-us.html
+++ b/about-us.html
@@ -38,7 +38,7 @@
         <!--================Header Menu Area =================-->
         <header class="main_menu_area">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
+                <a class="navbar-brand" href="index.html"><img src="img/logo.svg" alt=""></a>
                 <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span></span>
                     <span></span>
@@ -251,7 +251,7 @@
 text-align: center;
 font-size: 15px;
 ">
-Copyright ©<script>document.write(new Date().getFullYear());</script>2023  <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="budgetwebcreator.web.app" target="_blank">Budget web Creator</a>
+Copyright ©<script>document.write(new Date().getFullYear());</script>  <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="budgetwebcreator.web.app" target="_blank">Budget web Creator</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></h6>
                 </div>
                 </div>
