--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-1.png" alt="">
+                                <img src="img/icon/f-icon-1.svg" alt="">
                             </div>
                             <h4>Increased Income</h4>
                             <p>Through performance insights, planning and opportunities.</p>
@@ -389,7 +389,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-1.png" alt="">
+                                <img src="img/icon/f-icon-1.svg" alt="">
                             </div>
                             <h4>Brand Identity</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
