--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-2.png" alt="">
+                                <img src="img/icon/f-icon-2.svg" alt="">
                             </div>
                             <h4>Empowerment</h4>
                             <p>Access to privileged perks, as well as identity and financial development.</p>
@@ -309,7 +309,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-3.png" alt="">
+                                <img src="img/icon/f-icon-3.svg" alt="">
                             </div>
                             <h4>Social security</h4>
                             <p>Access to health care, insurance, and social security. </p>
@@ -399,7 +399,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-2.png" alt="">
+                                <img src="img/icon/f-icon-2.svg" alt="">
                             </div>
                             <h4>Online Marketing</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
@@ -409,7 +409,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-3.png" alt="">
+                                <img src="img/icon/f-icon-3.svg" alt="">
                             </div>
                             <h4>Social Media</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
@@ -419,7 +419,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-4.png" alt="">
+                                <img src="img/icon/f-icon-4.svg" alt="">
                             </div>
                             <h4>Video Support</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
@@ -429,7 +429,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-5.png" alt="">
+                                <img src="img/icon/f-icon-5.svg" alt="">
                             </div>
                             <h4>Fast Support</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
@@ -439,7 +439,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-6.png" alt="">
+                                <img src="img/icon/f-icon-6.svg" alt="">
                             </div>
                             <h4>Download test</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
