--- a/service.html
+++ b/service.html
@@ -96,7 +96,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-2.png" alt="">
+                                <img src="img/icon/f-icon-2.svg" alt="">
                             </div>
                             <h4>Online Marketing</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
@@ -106,7 +106,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-3.png" alt="">
+                                <img src="img/icon/f-icon-3.svg" alt="">
                             </div>
                             <h4>Social Media</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
@@ -116,7 +116,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-4.png" alt="">
+                                <img src="img/icon/f-icon-4.svg" alt="">
                             </div>
                             <h4>Video Support</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
@@ -126,7 +126,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-5.png" alt="">
+                                <img src="img/icon/f-icon-5.svg" alt="">
                             </div>
                             <h4>Fast Support</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
@@ -136,7 +136,7 @@
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-6.png" alt="">
+                                <img src="img/icon/f-icon-6.svg" alt="">
                             </div>
                             <h4>Download test</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
