--- a/elements.html
+++ b/elements.html
@@ -288,7 +288,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-4.png" alt="">
+                                <img src="img/icon/f-icon-4.svg" alt="">
                             </div>
                             <h4>Video Support</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
@@ -298,7 +298,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-5.png" alt="">
+                                <img src="img/icon/f-icon-5.svg" alt="">
                             </div>
                             <h4>Fast Support</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
@@ -308,7 +308,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-6.png" alt="">
+                                <img src="img/icon/f-icon-6.svg" alt="">
                             </div>
                             <h4>Download test</h4>
                             <p>Budget Creators Budget Creators Budget CreatorsBudget Creators Budget Creators Budget Creators Budget Creators Davinder Singh. </p>
