--- a/index.html
+++ b/index.html
@@ -115,11 +115,10 @@
             <div class="col-12 hero-text-image">
               <div class="row">
                 <div class="col-lg-7 text-center text-lg-left">
-                  <h1 data-aos="fade-right">Promote Your App with SoftLand</h1>
-                  <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Davinder Singh Davinder Singh, budget Web creator
-                    adipisicing budget .</p>
+                  <h1 data-aos="fade-right">Supercharging Gig Work Experience Everywhere</h1>
+                  <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Your All-in-One Solution for Earning, Managing, and Connecting</p>
                   <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#"
-                      class="btn btn-outline-white">Get started</a></p>
+                      class="btn btn-outline-white">Free Download</a></p>
                 </div>
                 <div class="col-lg-5 iphone-wrap">
                   <img src="img/phone_1.png" alt="Image" class="phone-1" data-aos="fade-right">
@@ -137,7 +136,7 @@
 
           <div class="row justify-content-center text-center mb-5">
             <div class="col-md-5" data-aos="fade-up">
-              <h2 class="section-heading">Save your time to using SoftLand</h2>
+              <h2 class="section-heading">Be part of an exclusive Gig community</h2>
             </div>
           </div>
 
@@ -147,8 +146,8 @@
                 <div class="wrap-icon icon-1">
                   <span class="icon la la-users"></span>
                 </div>
-                <h3 class="mb-3">Explore Your Team</h3>
-                <p>Davinder Singh Davinder Singh, budget Web creator adipisicing budget . Rem, optio.</p>
+                <h3 class="mb-3">Earn More in Less</h3>
+                <p>Gigly's AI scheduler optimizes your schedule for maximum earnings and adjusts for missed opportunities based on your earning goals.</p>
               </div>
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
@@ -156,8 +155,8 @@
                 <div class="wrap-icon icon-1">
                   <span class="icon la la-toggle-off"></span>
                 </div>
-                <h3 class="mb-3">Digital Whiteboard</h3>
-                <p>Davinder Singh Davinder Singh, budget Web creator adipisicing budget . Rem, optio.</p>
+                <h3 class="mb-3">Manage Your Finance</h3>
+                <p>Sync your earnings from all platforms, expenses, instant cash or finance all in one place.</p>
               </div>
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
@@ -165,8 +164,8 @@
                 <div class="wrap-icon icon-1">
                   <span class="icon la la-umbrella"></span>
                 </div>
-                <h3 class="mb-3">Design To Development</h3>
-                <p>Davinder Singh Davinder Singh, budget Web creator adipisicing budget . Rem, optio.</p>
+                <h3 class="mb-3">A maketplace of goodies</h3>
+                <p>Exclusive discount and offers for your work and lifestyle chaices - and conect with all privilege community club members.</p>
               </div>
             </div>
           </div>
@@ -214,10 +213,8 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-4 mr-auto">
-              <h2 class="mb-4">Seamlessly Communicate</h2>
-              <p class="mb-4">Davinder Singh Davinder Singh, budget Web creator adipisicing budget . Tenetur at budget web creator optio,
-                laudantium eius quod, Davinderm maxime molestiae porro omnis. Davinders aspernatur delectus impedit incidunt
-                Davinder mollitia Budget natus beatae.</p>
+              <h2 class="mb-4">AI based schedule optimization</h2>
+              <p class="mb-4">A streamlined solution to maximize earnings and optimize work schedules. Gigly's AI scheduler intelligently identifies the most advantageous opportunities to meet your goals. Leveraging data, the scheduler dynamically adjusts schedules. you now can achieve your financial goal flexibily and work-life balance. Automatic syncing with your calendar ensures zero effort in planning.</p>
               <p><a href="#">Download Now</a></p>
             </div>
             <div class="col-md-6" data-aos="fade-left">
@@ -231,7 +228,7 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-4 ml-auto order-2">
-              <h2 class="mb-4">Gather Feedback</h2>
+              <h2 class="mb-4">Insights and allerts</h2>
               <p class="mb-4">Davinder Singh Davinder Singh, budget Web creator adipisicing budget . Tenetur at budget web creator optio,
                 laudantium eius quod, Davinderm maxime molestiae porro omnis. Davinders aspernatur delectus impedit incidunt
                 Davinder mollitia Budget natus beatae.</p>
