--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SoftLand BudgetWebCreator Template</title>
+  <title>Gigly</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -29,8 +29,8 @@
   <link href="css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-    Template Name: SoftLand
-    Template URL: https://bootstrapmade.com/softland-bootstrap-app-landing-page-template/
+    Template Name: Gigly
+    Template URL: https://bootstrapmade.com/Gigly-bootstrap-app-landing-page-template/
     Author: BootstrapMade.com
     Author URL: https://bootstrapmade.com/
   ======================================================= -->
@@ -55,7 +55,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-lg-2">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="mb-0">SoftLand</a></h1>
+            <h1 class="mb-0 site-logo"><a href="index.html" class="mb-0">Gigly</a></h1>
           </div>
 
           <div class="col-12 col-md-10 d-none d-lg-block">
@@ -166,8 +166,8 @@
                 <div class="wrap-icon icon-1">
                   <span class="icon la la-umbrella"></span>
                 </div>
-                <h3 class="mb-3">A maketplace of goodies</h3>
-                <p>Exclusive discount and offers for your work and lifestyle chaices - and conect with all privilege
+                <h3 class="mb-3">A marketplace of goodies</h3>
+                <p>Exclusive discount and offers for your work and lifestyle choices - and connect with all privilege
                   community club members.</p>
               </div>
             </div>
@@ -253,8 +253,10 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-4 ml-auto order-2">
-              <h2 class="mb-4">Insights and allerts</h2>
-              <p class="mb-4">Gigly ensures updated demand insights and alerts to optimize.</p>
+              <h2 class="mb-4">Insights and alerts</h2>
+              <p class="mb-4">Gigly ensures updated demand insights and alerts to optimize your work decisions. you can
+                also personalize Gigly as your work assistant and get alerts and insights ensures you moving towards
+                your financial and efficiency goals.</p>
               <p><a href="#">Download Now</a></p>
             </div>
             <div class="col-md-6" data-aos="fade-right">
@@ -263,6 +265,25 @@
           </div>
         </div>
       </div> <!-- .site-section -->
+
+      <!-- .custom for your marketplace -->
+      <div class="site-section pb-0">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-4 mr-auto">
+              <h2 class="mb-4">Your Marketplace</h2>
+              <p class="mb-4">Marketplace serves as a dynamic hub where you can access a wide range of offers,
+                promotions, and privileges tailored to your needs. Explore diverse opportunities, including high-paying
+                gigs, exclusive promotions, and special incentives offered by our partners. You can post your items,
+                needs or services, facilitating connections with other users who can fulfill those requirements.</p>
+              <p><a href="#">Download Now</a></p>
+            </div>
+            <div class="col-md-6" data-aos="fade-left">
+              <img src="img/undraw_svg_2.svg" alt="Image" class="img-fluid">
+            </div>
+          </div>
+        </div>
+      </div> <!-- .custom for your marketplace -->
 
 
       <div class="site-section border-top border-bottom">
@@ -454,7 +475,7 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-6 mr-auto text-center text-md-left mb-5 mb-md-0">
-              <h2>Starts Publishing Your Apps</h2>
+              <h2>Upgrade Your Gigly Journey</h2>
             </div>
             <div class="col-md-5 text-center text-md-right">
               <p><a href="#" class="btn"><span class="icofont-brand-apple mr-3"></span>App store</a> <a href="#"
@@ -470,10 +491,12 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 mb-4 mb-md-0">
-            <h3>About SoftLand</h3>
-            <p>Davinder Singh Davinder Singh, budget Web creator adipisicing budget . Eius ea delectus budget ,
-              numBudget Web creator aperiam
-              Davinder nam optio Davinderm facilis itaque budget recusandae creator minus animi.</p>
+            <h3>About Gigly</h3>
+            <p>Gigly, where opportunity meets empowerment in the fast-paced world of AI. Whether you're a seasoned
+              freelancer or just dipping your toes into the gig economy, Gigly is your go-to platform for unlocking your
+              full potential. With our intuitive AI-driven, personalized tools, dynamic marketplace and futuristic
+              ecosystem, Gigly streamlines your journey, connecting you with high-paying gigs, exclusive promotions, and
+              a vibrant community of fellow gig workers. Say hello to the future!</p>
             <p class="social">
               <a href="#"><span class="icofont-twitter"></span></a>
               <a href="#"><span class="icofont-facebook"></span></a>
@@ -514,13 +537,13 @@
 
         <div class="row justify-content-center text-center">
           <div class="col-md-7">
-            <p class="copyright">&copy; Copyright SoftLand. </p>
+            <p class="copyright">&copy; Copyright Gigly. </p>
             <div class="credits">
               <!--
                 All the links in the footer should remain intact.
                 You can delete the links only if you purchased the pro version.
                 Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=SoftLand
+                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Gigly
               -->
               <a href="https://bootstrapmade.com/"></a>
             </div>
