--- a/index.html
+++ b/index.html
@@ -208,21 +208,21 @@
               <div class="step">
                 <span class="number">01</span>
                 <h3>Sign Up</h3>
-                <p>Davinder Singh Davinder Singh, budget Web creator adipisicing budget . Rem, optio.</p>
+                <p>Easy email or phone signup.</p>&nbsp;&nbsp;
               </div>
             </div>
             <div class="col-md-4">
               <div class="step">
                 <span class="number">02</span>
-                <h3>Create Profile</h3>
-                <p>Davinder Singh Davinder Singh, budget Web creator adipisicing budget . Rem, optio.</p>
+                <h3>Link Platforms</h3>
+                <p>Link your existing platform profile and you are all set.</p>
               </div>
             </div>
             <div class="col-md-4">
               <div class="step">
                 <span class="number">03</span>
                 <h3>Enjoy the app</h3>
-                <p>Davinder Singh Davinder Singh, budget Web creator adipisicing budget . Rem, optio.</p>
+                <p>Enjoy privilege benefits with monthly or yearly subscription and even free.</p>
               </div>
             </div>
           </div>
@@ -240,7 +240,7 @@
                 scheduler intelligently identifies the most advantageous opportunities to meet your goals. Leveraging
                 data, the scheduler dynamically adjusts schedules. you now can achieve your financial goal flexibily and
                 work-life balance. Automatic syncing with your calendar ensures zero effort in planning.</p>
-              <p><a href="#">Download Now</a></p>
+              <!--<p><a href="#">Download Now</a></p>-->
             </div>
             <div class="col-md-6" data-aos="fade-left">
               <img src="img/undraw_svg_2.svg" alt="Image" class="img-fluid">
@@ -257,7 +257,7 @@
               <p class="mb-4">Gigly ensures updated demand insights and alerts to optimize your work decisions. you can
                 also personalize Gigly as your work assistant and get alerts and insights ensures you moving towards
                 your financial and efficiency goals.</p>
-              <p><a href="#">Download Now</a></p>
+              <!--<p><a href="#">Download Now</a></p>-->
             </div>
             <div class="col-md-6" data-aos="fade-right">
               <img src="img/undraw_svg_3.svg" alt="Image" class="img-fluid">
@@ -276,7 +276,7 @@
                 promotions, and privileges tailored to your needs. Explore diverse opportunities, including high-paying
                 gigs, exclusive promotions, and special incentives offered by our partners. You can post your items,
                 needs or services, facilitating connections with other users who can fulfill those requirements.</p>
-              <p><a href="#">Download Now</a></p>
+              <!--<p><a href="#">Download Now</a></p>-->
             </div>
             <div class="col-md-6" data-aos="fade-left">
               <img src="img/undraw_svg_2.svg" alt="Image" class="img-fluid">
