--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
                     <li><a href="blog-single.html" class="nav-link">Blog Sigle</a></li>
                   </ul>-->
                 </li>
+                
+                <li><a href="#qr-code" class="btn btn-outline-white free-download">Free Download</a></li>
                 <!--<li><a href="contact.html" class="nav-link">Contact</a></li>-->
               </ul>
             </nav>
