--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <li class="active"><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="#features" class="nav-link">Features</a></li>
                 <li><a href="#price" class="nav-link">Pricing</a></li>
+                <li><a href="#" class="nav-link">Approach</a></li>
 
                 <!--<li class="has-children">-->
                 <li><a href="#blog" class="nav-link">Blog</a>
