--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-4 mr-auto">
-              <h2 class="mb-4">AI based schedule optimization</h2>
+              <h2 class="mb-4"><a href="#">AI based schedule optimization</a></h2>
               <p class="mb-4">A streamlined solution to maximize earnings and optimize work schedules. Gigly's AI
                 scheduler intelligently identifies the most advantageous opportunities to meet your goals. Leveraging
                 data, the scheduler dynamically adjusts schedules. you now can achieve your financial goal flexibily and
@@ -256,7 +256,7 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-4 ml-auto order-2">
-              <h2 class="mb-4">Insights and alerts</h2>
+              <h2 class="mb-4"><a href="#">Insights and alerts</a></h2>
               <p class="mb-4">Gigly ensures updated demand insights and alerts to optimize your work decisions. you can
                 also personalize Gigly as your work assistant and get alerts and insights ensures you moving towards
                 your financial and efficiency goals.</p>
@@ -274,7 +274,7 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-4 mr-auto">
-              <h2 class="mb-4">Your Marketplace</h2>
+              <h2 class="mb-4"><a href="#">Your Marketplace</a></h2>
               <p class="mb-4">Marketplace serves as a dynamic hub where you can access a wide range of offers,
                 promotions, and privileges tailored to your needs. Explore diverse opportunities, including high-paying
                 gigs, exclusive promotions, and special incentives offered by our partners. You can post your items,
