--- a/blog-single.html
+++ b/blog-single.html
@@ -353,7 +353,7 @@
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Services</h3>
                 <ul class="list-unstyled">
-                  <li><a href="#">Team</a></li>
+                  <li><a href="team.html">Team</a></li>
                   <li><a href="#">Collaboration</a></li>
                   <li><a href="#">Todos</a></li>
                   <li><a href="#">Events</a></li>
