--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
-
   <!-- =======================================================
     Template Name: Gigly
     Template URL: https://bootstrapmade.com/Gigly-bootstrap-app-landing-page-template/
@@ -386,6 +385,85 @@
         </div>
       </div>
 
+    <!--SERVICE AREA-->
+    <section class="service-area section-padding" id="service">
+      <div class="container">
+          <div class="row flex-v-center">
+              <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
+                  <div class="single-service right wow fadeIn">
+                      <div class="service-icon">
+                          <div class="icon la la-users"></div>
+                      </div>
+                      <h4>Web Development</h4>
+                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
+                  </div>
+                  <div class="single-service right wow fadeIn">
+                      <div class="service-icon">
+                          <div class="i la la-camera"></div>
+                      </div>
+                      <h4>Photography</h4>
+                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
+                  </div>
+                  <div class="single-service right  wow fadeIn">
+                      <div class="service-icon">
+                          <div class="i la la-desktop"></div>
+                      </div>
+                      <h4>Web Design</h4>
+                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
+                  </div>
+                  <div class="single-service right mbzero wow fadeIn">
+                      <div class="service-icon">
+                          <div class="i la la-rocket"></div>
+                      </div>
+                      <h4>Web Development</h4>
+                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
+                  </div>
+              </div>
+              <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12 hidden-sm">
+                  <div class="service-image text-center wow fadeIn">
+                      <img src="img/service/service-mockup.png" alt="">
+                  </div>
+              </div>
+              <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
+                  <div class="single-service left wow fadeIn">
+                      <div class="service-icon">
+                          <div class="i la la-cog"></div>
+                      </div>
+                      <h4>Online Marketing</h4>
+                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
+                  </div>
+                  <div class="single-service left wow fadeIn">
+                      <div class="service-icon">
+                          <div class="i la la-bullhorn"></div>
+                      </div>
+                      <h4>Degital Media</h4>
+                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
+                  </div>
+                  <div class="single-service left  wow fadeIn">
+                      <div class="service-icon">
+                          <div class="i la la-cog"></div>
+                      </div>
+                      <h4>24/7 Support</h4>
+                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
+                  </div>
+                  <div class="single-service left mbzero wow fadeIn">
+                      <div class="service-icon">
+                          <div class="i la la-cog"></div>
+                      </div>
+                      <h4>24/7 Support</h4>
+                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+  <!--SERVICE AREA END-->
+
+
+
+
+
+
       <!--custom code for price-->
       <div class="site-section" id="price">
         <div class="container">
@@ -521,7 +599,7 @@
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Services</h3>
                 <ul class="list-unstyled">
-                  <li><a href="#">Team</a></li>
+                  <li><a href="team.html">Team</a></li>
                   <li><a href="#">Collaboration</a></li>
                   <li><a href="#">Todos</a></li>
                   <li><a href="#">Events</a></li>
