--- a/team.html
+++ b/team.html
@@ -62,10 +62,10 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li ><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="#features" class="nav-link">Features</a></li>
                 <li><a href="#price" class="nav-link">Pricing</a></li>
-                <li class="active"><a href="approch.html" class="nav-link">Approach</a></li>
+                <li><a href="approch.html" class="nav-link">Approach</a></li>
 
                 <!--<li class="has-children">-->
                 <li><a href="#blog" class="nav-link">Blog</a>
@@ -125,39 +125,69 @@
         
       </div>
 
-      <div class="site-section">
+      <div class="site-section team">
         <div class="container">
-          <div class="row justify-content-center text-center mb-5" data-aos="fade">
-            <div class="col-md-6 mb-5">
-              <img src="img/undraw_svg_1.svg" alt="Image" class="img-fluid">
+
+          <div class="row justify-content-center text-center mb-5">
+            <div class="col-md-5 aos-init aos-animate" data-aos="fade-up">
+              <h2 class="section-heading">Team</h2>
+              <p>Sed ut budgetwebcreator Davinder Singh Davinder Singh BudgetWebCreator BudgetWebCreator Davinder Singh Davinder Singh</p>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-4">
-              <div class="step">
-                <span class="number">01</span>
-                <h3>Sign Up</h3>
-                <p>Easy email or phone signup.</p>&nbsp;&nbsp;
+            <div class="col-md-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="">
+              <div class="feature-1 text-center">
+                <div class="wrap-icon icon-1">
+                  <img src="img/team/member-1.jpg" alt="">
+                  <span class="icon"></span>
+                </div>
+                <h3 class="mb-3">Walter White</h3>
+                <p>Chief Executive Officer</p>
+                <p class="social">
+                  <a href="#"><span class="icofont-twitter"></span></a>
+                  <a href="#"><span class="icofont-facebook"></span></a>
+                  <a href="#"><span class="icofont-google-plus"></span></a>
+                  <a href="#"><span class="icofont-linkedin"></span></a>
+                </p>
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="step">
-                <span class="number">02</span>
-                <h3>Link Platforms</h3>
-                <p>Link your existing platform profile and you are all set.</p>
+            <div class="col-md-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+              <div class="feature-1 text-center">
+                <div class="wrap-icon icon-1">
+                  <img src="img/team/member-2.jpg" alt="">
+                  <span class="icon"></span>
+                </div>
+                <h3 class="mb-3">Sarah Jhinson</h3>
+                <p>Product Manager</p>
+                <p class="social">
+                  <a href="#"><span class="icofont-twitter"></span></a>
+                  <a href="#"><span class="icofont-facebook"></span></a>
+                  <a href="#"><span class="icofont-google-plus"></span></a>
+                  <a href="#"><span class="icofont-linkedin"></span></a>
+                </p>
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="step">
-                <span class="number">03</span>
-                <h3>Enjoy the app</h3>
-                <p>Enjoy privilege benefits with monthly or yearly subscription and even free.</p>
+            <div class="col-md-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+              <div class="feature-1 text-center">
+                <div class="wrap-icon icon-1">
+                  <img src="img/team/member-3.jpg" alt="">
+                  <span class="icon"></span>
+                </div>
+                <h3 class="mb-3">William Anderson</h3>
+                <p>CTO</p>
+                <p class="social">
+                  <a href="#"><span class="icofont-twitter"></span></a>
+                  <a href="#"><span class="icofont-facebook"></span></a>
+                  <a href="#"><span class="icofont-google-plus"></span></a>
+                  <a href="#"><span class="icofont-linkedin"></span></a>
+                </p>
               </div>
             </div>
           </div>
+
         </div>
-      </div> <!-- .site-section -->
+      </div>
 
       <div class="site-section cta-section">
         <div class="container">
@@ -206,7 +236,7 @@
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Services</h3>
                 <ul class="list-unstyled">
-                  <li><a href="team.html">Team</a></li>
+                  <li class="active"><a href="team.html">Team</a></li>
                   <li><a href="#">Collaboration</a></li>
                   <li><a href="#">Todos</a></li>
                   <li><a href="#">Events</a></li>
